--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -106,7 +106,7 @@ spec:
               mountPath: /etc/netbox/config/configuration.py
               subPath: configuration.py
               readOnly: true
-            {{ if eq .Values.remoteAuth.backend "netbox.authentication.LDAPBackend" -}}
+            {{ if eq .Values.remoteAuthBackend "netbox.authentication.LDAPBackend" -}}
             - name: config
               mountPath: /etc/netbox/config/ldap/ldap_config.py
               subPath: ldap_config.py
@@ -171,7 +171,7 @@ spec:
                       path: napalm_password
                     - key: secret_key
                       path: secret_key
-                    {{- if eq .Values.remoteAuth.backend "netbox.authentication.LDAPBackend" }}
+                    {{- if eq .Values.remoteAuthBackend "netbox.authentication.LDAPBackend" }}
                     - key: ldap_bind_password
                       path: ldap_bind_password
                     {{- end }}
