--- a/values.yaml
+++ b/values.yaml
@@ -387,79 +387,6 @@ serviceMonitor:
   interval: 1m
   scrapeTimeout: 10s
 
-# Configuration of Cron settings
-housekeeping:
-  enabled: true
-  concurrencyPolicy: Forbid
-  failedJobsHistoryLimit: 5
-  restartPolicy: OnFailure
-  schedule: '0 0 * * *'
-  successfulJobsHistoryLimit: 5
-  suspend: false
-
-  podAnnotations: {}
-
-  podLabels: {}
-
-  podSecurityContext:
-    fsGroup:
-    runAsNonRoot: true
-  securityContext:
-    capabilities:
-      drop:
-        - ALL
-    readOnlyRootFilesystem: true
-    runAsNonRoot: true
-    runAsUser:
-    runAsGroup:
-
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-  resources: {}
-
-  nodeSelector: {}
-
-  tolerations: []
-
-  affinity: {}
-
-  ## Additional environment variables to set
-  extraEnvs: []
-  #  - name: FOO
-  #    valueFrom:
-  #      secretKeyRef:
-  #        key: FOO
-  #        name: secret-resource
-
-  ## Additional volumes to mount
-  extraVolumeMounts: []
-  #  - name: extra-volume
-  #    mountPath: /run/secrets/super-secret
-  #    readOnly: true
-
-  extraVolumes: []
-  #  - name: extra-volume
-  #    secret:
-  #      secretName: super-secret
-
-  ## Additional containers to be added to the NetBox pod.
-  extraContainers: []
-  #  - name: my-sidecar
-  #    image: nginx:latest
-
-  ## Containers which are run before the NetBox containers are started.
-  extraInitContainers: []
-  #  - name: init-myservice
-  #    image: busybox
-  #    command: ['sh', '-c', 'until nslookup myservice; do echo waiting for myservice; sleep 2; done;']
 
 # Worker for Netbox
 # Only required for Netbox Jobs, e.g. Webhooks
@@ -562,6 +489,10 @@ useBundleRedis: true
 useExternalRedis: false
 useSentinelRedis: false
 
+## NetBox includes a housekeeping management command that should be run nightly.
+# Set to false to disable the dayly cronjob.
+useNetboxHousekeeping: true
+
 ###########################################################################
 #
 # Netbox configuration
@@ -574,13 +505,13 @@ useSentinelRedis: false
 # -------------------------------------------------------------------------
 
 ## This is a list of valid fully-qualified domain names (FQDNs) for the NetBox
-#  server. NetBox will not permit write access to the server via any other
-#  hostnames. The first FQDN in the list will be treated as the preferred name.
+# server. NetBox will not permit write access to the server via any other
+# hostnames. The first FQDN in the list will be treated as the preferred name.
 allowedHosts:
   - '*'
 
 ## Bundle database settings
-# hese options overwrite the default values in the bundle postgresql chart
+# These options overwrite the default values in the bundle postgresql chart
 # values.yaml file. See the bitnami values.yaml file here:
 # https://github.com/bitnami/charts/blob/main/bitnami/postgresql/values.yaml
 postgresql:
@@ -1031,11 +962,9 @@ napalm:
   args: {}
 
 
-###########################################################################
-#
+# -------------------------------------------------------------------------
 # LDAP Configuration
-#
-###########################################################################
+# -------------------------------------------------------------------------
 
 # Check the documentations
 # https://docs.netbox.dev/en/stable/installation/6-ldap/
@@ -1069,12 +998,9 @@ ldapAttrFirstName: 'givenName'
 ldapAttrLastName: 'sn'
 ldapAttrMail: 'mail'
 
-
-###########################################################################
-#
+# -------------------------------------------------------------------------
 # Extra Configuration
-#
-###########################################################################
+# -------------------------------------------------------------------------
 
 ## Extra configuration settings
 # You can pass additional YAML files to be loaded into NetBox's configuration.
@@ -1092,3 +1018,83 @@ extraConfig: []
   #     secretName: netbox-extra
   #     items: []
   #     optional: false
+
+###########################################################################
+#
+# Netbox Housekeeping
+#
+###########################################################################
+
+# Configuration of Cron settings
+housekeeping:
+  enabled: true
+  concurrencyPolicy: Forbid
+  failedJobsHistoryLimit: 5
+  restartPolicy: OnFailure
+  schedule: '0 0 * * *'
+  successfulJobsHistoryLimit: 5
+  suspend: false
+
+  podAnnotations: {}
+
+  podLabels: {}
+
+  podSecurityContext:
+    fsGroup:
+    runAsNonRoot: true
+  securityContext:
+    capabilities:
+      drop:
+        - ALL
+    readOnlyRootFilesystem: true
+    runAsNonRoot: true
+    runAsUser:
+    runAsGroup:
+
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+  resources: {}
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  ## Additional environment variables to set
+  extraEnvs: []
+  #  - name: FOO
+  #    valueFrom:
+  #      secretKeyRef:
+  #        key: FOO
+  #        name: secret-resource
+
+  ## Additional volumes to mount
+  extraVolumeMounts: []
+  #  - name: extra-volume
+  #    mountPath: /run/secrets/super-secret
+  #    readOnly: true
+
+  extraVolumes: []
+  #  - name: extra-volume
+  #    secret:
+  #      secretName: super-secret
+
+  ## Additional containers to be added to the NetBox pod.
+  extraContainers: []
+  #  - name: my-sidecar
+  #    image: nginx:latest
+
+  ## Containers which are run before the NetBox containers are started.
+  extraInitContainers: []
+  #  - name: init-myservice
+  #    image: busybox
+  #    command: ['sh', '-c', 'until nslookup myservice; do echo waiting for myservice; sleep 2; done;']
