Reorganizing for claririty and readability

--- a/templates/deploymentconfig.yaml
+++ b/templates/deploymentconfig.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: apps.openshift.io/v1
+kind: DeploymentConfig
 metadata:
   name: {{ include "netbox.fullname" . }}
   {{- with .Values.commonAnnotations }}
@@ -11,15 +11,15 @@ metadata:
     app.kubernetes.io/component: netbox
 spec:
 {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.deploymentConfig.replicaCount }}
 {{- end }}
   selector:
     matchLabels:
       {{- include "netbox.selectorLabels" . | nindent 6 }}
       app.kubernetes.io/component: netbox
-  {{ if .Values.updateStrategy -}}
+  {{ if .Values.deploymentConfig.updateStrategy -}}
   strategy:
-    {{- toYaml .Values.updateStrategy | nindent 4 }}
+    {{- toYaml .Values.deploymentConfig.updateStrategy | nindent 4 }}
   {{ end -}}
   template:
     metadata:
@@ -28,44 +28,44 @@ spec:
         {{- if (not .Values.existingSecret) }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
         {{- end }}
-        {{- with .Values.podAnnotations }}
+        {{- with .Values.deploymentConfig.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
         {{- include "netbox.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: netbox
-        {{- with .Values.podLabels }}
+        {{- with .Values.deploymentConfig.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
+      {{- with .Values.image.imagePullSecrets }}
+      image.imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "netbox.serviceAccountName" . }}
       securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+        {{- toYaml .Values.deploymentConfig.podSecurityContext | nindent 8 }}
       initContainers:
         - name: init-dirs
-          image: "{{ .Values.init.image.repository }}:{{ .Values.init.image.tag }}"
-          imagePullPolicy: {{ .Values.init.image.pullPolicy }}
+          image: "{{ .Values.initContainers.image.repository }}:{{ .Values.initContainers.image.tag }}"
+          imagePullPolicy: {{ .Values.deploymentConfig.initContainers.image.pullPolicy }}
           command: [/bin/sh, -c, mkdir -p /opt/unit/state /opt/unit/tmp]
-          {{- if .Values.init.resources }}
+          {{- if .Values.deploymentConfig.initContainers.resources }}
           resources:
-            {{- toYaml .Values.init.resources | nindent 12 }}
+            {{- toYaml .Values.deploymentConfig.initContainers.resources | nindent 12 }}
           {{- end }}
           securityContext:
-            {{- toYaml .Values.init.securityContext | nindent 12 }}
+            {{- toYaml .Values.deploymentConfig.initContainers.securityContext | nindent 12 }}
           volumeMounts:
             - name: optunit
               mountPath: /opt/unit
-        {{- with .Values.extraInitContainers }}
+        {{- with .Values.deploymentConfig.initContainers.extraInitContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml .Values.deploymentConfig.containers.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
@@ -74,19 +74,19 @@ spec:
             - name: SUPERUSER_EMAIL
               value: {{ .Values.superuser.email | quote }}
             - name: SKIP_STARTUP_SCRIPTS
-              value: {{ .Values.skipStartupScripts | quote }}
-            {{- if .Values.dbWaitDebug }}
+              value: {{ .Values.deploymentConfig.containers.skipStartupScripts | quote }}
+            {{- if .Values.deploymentConfig.containers.dbWaitDebug }}
             - name: DB_WAIT_DEBUG
               value: "1"
             {{- end }}
-            {{- with .Values.extraEnvs }}
+            {{- with .Values.deploymentConfig.containers.extraEnvs }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
-          {{- if .Values.readinessProbe.enabled }}
+          {{- if .Values.deploymentConfig.containers.readinessProbe.enabled }}
           readinessProbe:
             httpGet:
               path: /{{ .Values.basePath }}login/
@@ -96,10 +96,10 @@ spec:
                 - name: Host
                   value: {{ (index .Values.allowedHosts 0) | quote }}
               {{- end }}
-            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
-            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
-            successThreshold: {{ .Values.readinessProbe.successThreshold }}
-            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+            initialDelaySeconds: {{ .Values.deploymentConfig.containers.readinessProbe.initialDelaySeconds }}
+            timeoutSeconds: {{ .Values.deploymentConfig.containers.readinessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.deploymentConfig.containers.readinessProbe.successThreshold }}
+            periodSeconds: {{ .Values.deploymentConfig.containers.readinessProbe.periodSeconds }}
           {{- end }}
           volumeMounts:
             - name: config
@@ -139,14 +139,14 @@ spec:
               mountPath: /run/secrets/superuser_api_token
               subPath: superuser_api_token
               readOnly: true
-            {{- with .Values.extraVolumeMounts }}
+            {{- with .Values.deploymentConfig.containers.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-          {{- if .Values.resources }}
+          {{- if .Values.deploymentConfig.containers.resources }}
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml .Values.deploymentConfig.containers.resources | nindent 12 }}
           {{- end }}
-        {{- with .Values.extraContainers }}
+        {{- with .Values.deploymentConfig.containers.extraContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
@@ -209,26 +209,26 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Values.reportsPersistence.existingClaim | default (printf "%s-reports" (include "netbox.fullname" .)) }}
         {{- end }}
-        {{- with .Values.extraVolumes }}
+        {{- with .Values.deploymentConfig.extraVolumes }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{- with .Values.nodeSelector }}
+      {{- with .Values.deploymentConfig.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
+      {{- with .Values.deploymentConfig.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.tolerations }}
+      {{- with .Values.deploymentConfig.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.hostAliases }}
+      {{- with .Values.deploymentConfig.hostAliases }}
       hostAliases:
         {{- toYaml . | indent 8 }}
       {{- end }}
-      {{- with .Values.topologySpreadConstraints }}
+      {{- with .Values.deploymentConfig.topologySpreadConstraints }}
       topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
