--- a/templates/cronjob.yaml
+++ b/templates/cronjob.yaml
@@ -38,8 +38,8 @@ spec:
             {{- toYaml . | nindent 12 }}
             {{- end }}
         spec:
-          {{- with .Values.imagePullSecrets }}
-          imagePullSecrets:
+          {{- with .Values.image.imagePullSecrets }}
+          image.imagePullSecrets:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           serviceAccountName: {{ include "netbox.serviceAccountName" . }}
@@ -52,14 +52,14 @@ spec:
           containers:
             - name: {{ .Chart.Name }}-housekeeping
               securityContext:
-                {{- toYaml .Values.housekeeping.securityContext | nindent 16 }}
+                {{- toYaml .Values.housekeeping.containers.securityContext | nindent 16 }}
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
               command:
                 - /opt/netbox/venv/bin/python
                 - /opt/netbox/netbox/manage.py
                 - housekeeping
               imagePullPolicy: {{ .Values.image.pullPolicy }}
-              {{- with .Values.housekeeping.extraEnvs }}
+              {{- with .Values.housekeeping.containers.extraEnvs }}
               env:
                 {{- toYaml . | nindent 16 }}
               {{- end }}
@@ -91,14 +91,14 @@ spec:
                   mountPath: /opt/netbox/netbox/reports
                   subPath: {{ .Values.reportsPersistence.subPath | default "" | quote }}
                 {{- end }}
-                {{- with .Values.housekeeping.extraVolumeMounts }}
+                {{- with .Values.housekeeping.containers.extraVolumeMounts }}
                 {{- toYaml . | nindent 16 }}
                 {{- end }}
-              {{- if .Values.housekeeping.resources }}
+              {{- if .Values.housekeeping.containers.resources }}
               resources:
-                {{- toYaml .Values.housekeeping.resources | nindent 16 }}
+                {{- toYaml .Values.housekeeping.containers.resources | nindent 16 }}
               {{- end }}
-            {{- with .Values.housekeeping.extraContainers }}
+            {{- with .Values.housekeeping.containers.extraContainers }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
           volumes:
