--- a/templates/pvc-media.yaml
+++ b/templates/pvc-media.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) -}}
+{{- if and .Values.persistence.media.enabled (not .Values.persistence.media.existingClaim) -}}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -11,18 +11,18 @@ metadata:
 {{ include "netbox.labels" . | indent 4 }}
 spec:
   accessModes:
-    - {{ .Values.persistence.accessMode | quote }}
+    - {{ .Values.persistence.media.accessMode | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.size | quote }}
-{{- if .Values.persistence.storageClass }}
-{{- if (eq "-" .Values.persistence.storageClass) }}
+      storage: {{ .Values.persistence.media.size | quote }}
+{{- if .Values.persistence.media.storageClass }}
+{{- if (eq "-" .Values.persistence.media.storageClass) }}
   storageClassName: ""
 {{- else }}
-  storageClassName: {{ .Values.persistence.storageClass | quote }}
+  storageClassName: {{ .Values.persistence.media.storageClass | quote }}
 {{- end }}
 {{- end }}
-{{- if .Values.persistence.selector }}
-  selector: {{ toYaml .Values.persistence.selector | nindent 4 }}
+{{- if .Values.persistence.media.selector }}
+  selector: {{ toYaml .Values.persistence.media.selector | nindent 4 }}
 {{- end }}
 {{- end -}}
