--- a/templates/worker-hpa.yaml
+++ b/templates/worker-hpa.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.worker.enabled .Values.worker.autoscaling.enabled }}
+{{- if and .Values.useNetboxWorker .Values.workerAutoscaling.enabled }}
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -15,19 +15,19 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ include "netbox.fullname" . }}-worker
-  minReplicas: {{ .Values.worker.autoscaling.minReplicas }}
-  maxReplicas: {{ .Values.worker.autoscaling.maxReplicas }}
+  minReplicas: {{ .Values.workerAutoscaling.minReplicas }}
+  maxReplicas: {{ .Values.workerAutoscaling.maxReplicas }}
   metrics:
-  {{- if .Values.worker.autoscaling.targetCPUUtilizationPercentage }}
+  {{- if .Values.workerAutoscaling.targetCPUUtilizationPercentage }}
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: {{ .Values.worker.autoscaling.targetCPUUtilizationPercentage }}
+        targetAverageUtilization: {{ .Values.workerAutoscaling.targetCPUUtilizationPercentage }}
   {{- end }}
-  {{- if .Values.worker.autoscaling.targetMemoryUtilizationPercentage }}
+  {{- if .Values.workerAutoscaling.targetMemoryUtilizationPercentage }}
     - type: Resource
       resource:
         name: memory
-        targetAverageUtilization: {{ .Values.worker.autoscaling.targetMemoryUtilizationPercentage }}
+        targetAverageUtilization: {{ .Values.workerAutoscaling.targetMemoryUtilizationPercentage }}
   {{- end }}
 {{- end }}
