--- a/templates/worker-deploymentconfig.yaml
+++ b/templates/worker-deploymentconfig.yaml
@@ -88,7 +88,7 @@ spec:
             - name: media
               mountPath: /opt/netbox/netbox/media
               subPath: {{ .Values.persistence.subPath | default "" | quote }}
-            {{- if .Values.reportsPersistence.enabled }}
+            {{- if .Values.persistence.reports.enabled }}
             - name: reports
               mountPath: /opt/netbox/netbox/reports
               subPath: {{ .Values.reportsPersistence.subPath | default "" | quote }}
@@ -150,7 +150,7 @@ spec:
           {{- else }}
           emptyDir: {}
           {{- end }}
-        {{- if .Values.reportsPersistence.enabled }}
+        {{- if .Values.persistence.reports.enabled }}
         - name: reports
           persistentVolumeClaim:
             claimName: {{ .Values.reportsPersistence.existingClaim | default (printf "%s-reports" (include "netbox.fullname" .)) }}
