--- a/templates/worker-hpa.yaml
+++ b/templates/worker-hpa.yaml
@@ -1,5 +1,8 @@
-{{- if and .Values.useNetboxWorker .Values.workerAutoscaling.enabled }}
+{{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: autoscaling/v2
+{{- else -}}
 apiVersion: autoscaling/v2beta1
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "netbox.fullname" . }}-worker
