--- a/templates/worker-hpa.yaml
+++ b/templates/worker-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.useNetboxWorker .Values.workerAutoscaling.enabled }}
 {{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: autoscaling/v2
 {{- else -}}
